# Weather-NN

./: CMakeLists.txt  Executable.lnk
Ia/: CMakeLists.txt  Ia.cpp  Ia.h
Weather NN/: CMakeLists.txt  Define.h  Weather NN.cpp  Weather NN.h  aaa.txt  resource.h
Weather NN/Define/: Define.h
Weather NN/Neural Network/: Neural Network Private Pointers.cpp  Neural Network Private.cpp  Neural Network Public.cpp  Neural Network.cpp  Neural Network.h  Neuron.h  NeuronsHide.h  PointMassiveLib.h
Weather NN/Neural Network/Neuron/: Neuron.cpp  Neuron.h
Weather NN/Neural Network/Task/: Task.cpp  Task.h
Weather NN/Neural Network/Tester/: Tester.cpp  Tester.h
Weather NN/Poinve/: poinve.cpp  poinve.h
Weather NN/Random/: Random.cpp  Random.h
